--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,40 @@ jobs:
 
       - name: Checkstyle
         run: mvn checkstyle:checkstyle
+
+      - name: Install Java 11
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '11'
+          # cache: 'maven'
+          # cache-dependency-path: 'sub-project/pom.xml' # optional
+       # Setup sonar-scanner
+      - name: Setup SonarQube     
+        uses: warchant/setup-sonar-scanner@v7   
+
+      - name: SonarQube Scan
+        run: sonar-scanner
+             -Dsonar.host.url=${{ secrets.SONACLOUD_URL }}
+             -Dsonar.login=${{ secrets.SONACLOUD_TOKEN }}
+             -Dsonar.organization=${{ secrets.SONACLOUD_ORG}}
+             -Dsonar.projectKey=${{ secrets.SONACLOUD_PRJ }}
+             -Dsonar.sources=src/
+             -Dsonar.junit.reportPaths=target/surefire-reports
+             -Dsonar.java.jacoco.reportPaths=target/jacoco.exec
+             -Dsonar.java.checkstyle.reportPaths=target/site/checkstyle-result.xml
+             -Dsonar.java.binaries=target/classes/com/visualpathit/account
+# This is a basic workflow to help you get started with Actions
+            
+
+
+       
+
+
+
+
+
       
-      
-     
+    # Run sonar-scanner
+   
         
