--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,33 @@
 name: Hprofile Actions 
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:
+
+  pull_request:
+    branches:
+      - main
+ 
 jobs:
-  Testing:
+  Testing-Code-Quality:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Test Maven
+      - name: cache Maven Dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
+            
+
+      - name: Run Tests with Maven
         run: mvn  test
+        timeout-minutes: 10
 
       - name: Checkstyle
         run: mvn checkstyle:checkstyle
@@ -18,9 +37,7 @@ jobs:
         with:
           distribution: 'temurin'
           java-version: '11'
-          # cache: 'maven'
-          # cache-dependency-path: 'sub-project/pom.xml' # optional
-       # Setup sonar-scanner
+
       - name: Setup SonarQube     
         uses: warchant/setup-sonar-scanner@v7   
 
@@ -35,7 +52,7 @@ jobs:
              -Dsonar.java.jacoco.reportPaths=target/jacoco.exec
              -Dsonar.java.checkstyle.reportPaths=target/site/checkstyle-result.xml
              -Dsonar.java.binaries=target/classes/com/visualpathit/account
-# This is a basic workflow to help you get started with Actions
+
             
 
 
@@ -45,7 +62,5 @@ jobs:
 
 
 
-      
-    # Run sonar-scanner
-   
+  
         
